--- a/sever.properties
+++ b/sever.properties
@@ -1,6 +1,1 @@
-online-mode=false
-motd=Welcome to Ansab's Server!
-enable-command-block=true
-view-distance=10
-max-players=10
-server-port=25565
+motd=Ansab's Cloud Server is Live!
